--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/vkBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/vkBuild.data.br",
-        frameworkUrl: buildUrl + "/vkBuild.framework.js.br",
-        codeUrl: buildUrl + "/vkBuild.wasm.br",
+        dataUrl: buildUrl + "/vkBuild.data.gz",
+        frameworkUrl: buildUrl + "/vkBuild.framework.js.gz",
+        codeUrl: buildUrl + "/vkBuild.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "voronkovmm",
         productName: "Trail of Hero",
