--- a/index.html
+++ b/index.html
@@ -3,104 +3,209 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Trail of Hero</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Trail of Hero</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+	
+	<!-- Yandex Games SDK -->
+	<script src="https://yandex.ru/games/sdk/v2"></script>
   </head>
-  <body>
+  <body class="dark">
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas"></canvas>
+    </div>
+    <div id="loading-cover" style="display:none;">
       <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
+        <div id="unity-logo"><img src="logo.png"></div>
+        <div id="unity-progress-bar-empty" style="display: none;">
           <div id="unity-progress-bar-full"></div>
         </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Trail of Hero</div>
+        <div class="spinner"></div>
       </div>
     </div>
+    <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
-
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
-
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/vkBuild.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/vkBuild.data",
-        frameworkUrl: buildUrl + "/vkBuild.framework.js",
-        codeUrl: buildUrl + "/vkBuild.wasm",
+      const hideFullScreenButton = "1";
+      const buildUrl = "Build";
+      const loaderUrl = buildUrl + "/new.loader.js";
+      const config = {
+        dataUrl: buildUrl + "/new.data.unityweb",
+        frameworkUrl: buildUrl + "/new.framework.js.unityweb",
+        codeUrl: buildUrl + "/new.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "voronkovmm",
         productName: "Trail of Hero",
         productVersion: "1.0",
-        showBanner: unityShowBanner,
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
+      const container = document.querySelector("#unity-container");
+      const canvas = document.querySelector("#unity-canvas");
+      const loadingCover = document.querySelector("#loading-cover");
+      const progressBarEmpty = document.querySelector("#unity-progress-bar-empty");
+      const progressBarFull = document.querySelector("#unity-progress-bar-full");
+      const fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      const spinner = document.querySelector('.spinner');
+
+      const canFullscreen = (function() {
+        for (const key of [
+            'exitFullscreen',
+            'webkitExitFullscreen',
+            'webkitCancelFullScreen',
+            'mozCancelFullScreen',
+            'msExitFullscreen',
+          ]) {
+          if (key in document) {
+            return true;
+          }
+        }
+        return false;
+      }());
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         container.className = "unity-mobile";
-        // Avoid draining fillrate performance on mobile devices,
-        // and default/override low DPI mode on mobile browsers.
         config.devicePixelRatio = 1;
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
-      } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
       }
-      loadingBar.style.display = "block";
+      loadingCover.style.display = "";
+	  
+	  <!-- Yandex Code -->
+	  <!-- 2 -->
+	var player;
+    var sdk;
+    var payments = null;
+	var newInstance = null;
 
-      var script = document.createElement("script");
+      const script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
+          spinner.style.display = "none";
+          progressBarEmpty.style.display = "";
+          progressBarFull.style.width = `${100 * progress}%`;
         }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
+		
+			newInstance = unityInstance;
+			loadingCover.style.display = "none";
+			
+          if (canFullscreen) {
+            if (!hideFullScreenButton) {
+              fullscreenButton.style.display = "";
+            }
+            fullscreenButton.onclick = () => {
+              unityInstance.SetFullscreen(1);
+            };
+          }
         }).catch((message) => {
           alert(message);
         });
       };
+	  
+	  <!-- YaGames init --> 
+	  YaGames.init({
+            adv: {
+                onAdvClose: wasShown => {
+                      console.info('adv closed!');
+                }
+            }
+        })
+        .then(ysdk => {
+            sdk = ysdk;
+            sdk.adv.showFullscreenAdv({callbacks:{}});
+      });
+
+
+      function auth(){
+        sdk.auth.openAuthDialog().then(() => {
+                // Игрок успешно авторизован, теперь объект Player будет инициализирован.
+                initPlayer();
+                console.log('auth ok');
+            }).catch(() => {
+                 // Игрок не авторизован.
+                 console.log('auth failed');
+            });
+      }
+
+      function initPlayer(){
+        return sdk.getPlayer().then(_player => {
+                player = _player;       
+            }).catch(err => {
+                // Если игрок не авторизован, выбрасывает исключение USER_NOT_AUTHORIZED.
+            });
+      }
+
+      function getUserData(){
+        if(initPlayer){
+          var data = {"id" : player.getID(), "name" : player.getName(), "avatarUrlSmall" : player.getPhoto('small'), "avatarUrlMedium" : player.getPhoto('medium'), "avatarUrlLarge" : player.getPhoto('large')};
+          newInstance.SendMessage('YandexSDK', 'StoreUserData', JSON.stringify(data));
+        }
+      }
+
+      function showFullscrenAd(){
+        sdk.adv.showFullscreenAdv({
+          callbacks: {
+            onClose: function(wasShown) {
+              newInstance.SendMessage('YandexSDK', 'OnInterstitialShown');
+            },
+            onError: function(error) {
+              newInstance.SendMessage('YandexSDK', 'OnInterstitialFailed', error);
+            }
+          }
+        })
+      }
+
+      function showRewardedAd(id){
+        sdk.adv.showRewardedVideo({
+        callbacks: {
+            onOpen: () => {
+                newInstance.SendMessage('YandexSDK', 'OnRewardedOpen', id);
+                console.log('Video ad open. Id: ' + id);
+            },
+            onRewarded: () => {
+                newInstance.SendMessage('YandexSDK', 'OnRewarded', id);
+                console.log('Rewarded! Id: ' + id);
+            },
+            onClose: () => {
+                newInstance.SendMessage('YandexSDK', 'OnRewardedClose', id);
+                console.log('Video ad closed. Id: ' + id);
+            }, 
+            onError: (e) => {
+                var data = {"id" : id, "error" : error};
+                newInstance.SendMessage('YandexSDK', 'OnRewardedError', JSON.stringify(data));
+                console.log('Error while open video ad:', e);
+            }
+          }
+        })
+      }
+
+      function initPayments(){
+        sdk.getPayments().then(_payments => {
+          // Покупки доступны.
+          payments = _payments;
+        }).catch(err => {
+        })
+      }
+
+      function buy(id){
+        payments.purchase(id).then(purchase => {
+          // Покупка успешно совершена!
+          newInstance.SendMessage('YandexSDK', 'OnPurchaseSuccess', id);
+        }).catch(err => {
+          // Покупка не удалась: в консоли разработчика не добавлен товар с таким id,
+          // пользователь не авторизовался, передумал и закрыл окно оплаты,
+          // истекло отведенное на покупку время, не хватило денег и т. д.
+          newInstance.SendMessage('YandexSDK', 'OnPurchaseFailed', err);
+        })
+      }
+
+      window.onbeforeunload = function(e) {
+        console.log("Calling OnClose from Browser!");
+        gameInstance.SendMessage("YandexSDK", "OnClose");
+    
+        var dialogText = "You game has been saved!  Would you like to continue unloading the page?";
+        e.returnValue = dialogText;
+        return dialogText;
+      };
+	  
       document.body.appendChild(script);
     </script>
   </body>
