--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
 	  function showRewardAd()
 	  {
 		vkBridge.send("VKWebAppShowNativeAds", {ad_format:"reward","use_waterfall": true})
-		.then(data =>
-			if(data.result) {
-				newInstance.SendMessage('VkontakteSDK', 'OnInterstitialShown');
-				})
+		.then(data => newInstance.SendMessage('VkontakteSDK', 'OnInterstitialShown'))
 		.catch(error => console.log(error));
 	  }
 	  
