--- a/index.html
+++ b/index.html
@@ -68,7 +68,35 @@
       }
       loadingCover.style.display = "";
 	  
-
+		
+		
+		
+		
+		
+		const script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          spinner.style.display = "none";
+          progressBarEmpty.style.display = "";
+          progressBarFull.style.width = `${100 * progress}%`;
+        }).then((unityInstance) => {
+		
+			newInstance = unityInstance;
+			loadingCover.style.display = "none";
+			
+          if (canFullscreen) {
+            if (!hideFullScreenButton) {
+              fullscreenButton.style.display = "";
+            }
+            fullscreenButton.onclick = () => {
+              unityInstance.SetFullscreen(1);
+            };
+          }
+        }).catch((message) => {
+          alert(message);
+        });
+      };
 
 
 
