--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 	  <!-- Vkontakte code -->
 	  vkBridge.send('VKWebAppInit');
 	  
+	  <!-- Реклама перед загрузкой страницы -->
+	  vkBridge.send("VKWebAppShowNativeAds", {ad_format:"interstitial"})
+		.then(data => console.log(data.result))
+		.catch(error => console.log(error));
+	  
 	  function showRewardAd()
 	  {
 		vkBridge.send("VKWebAppShowNativeAds", {ad_format:"reward"})
@@ -122,7 +127,7 @@
 	  
 	  
 	  
-	  <!-- Отображение рекламы перед загрузкой страницы -->
+	  <!-- Если покидают страницу -->
 	  window.onbeforeunload = function(e) {
         console.log("Calling OnClose from Browser!");
         
