--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	  {
 		vkBridge.send("VKWebAppShowNativeAds", {ad_format:"reward"})
 		.then(data => {
-			if(data.result) newInstance.SendMessage('VkontakteSDK', 'OnRewardedShow'))
+			if(data.result) newInstance.SendMessage('VkontakteSDK', 'OnRewardedShow');
 		})
 		.catch(error => console.log(error));
 	  }
@@ -124,7 +124,7 @@
 	  {
 		vkBridge.send("VKWebAppShowNativeAds", {ad_format:"interstitial"})
 		.then(data => {
-			if(data.result) newInstance.SendMessage('VkontakteSDK', 'OnInterstitialShow'))
+			if(data.result) newInstance.SendMessage('VkontakteSDK', 'OnInterstitialShow');
 		})
 		.catch(error => console.log(error));
 	  }
