--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Trail of Hero</title>
+    <title>{{{ PRODUCT_NAME }}}</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 	
 	<!-- Vkontakte SDK -->
 	<script src ="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
   </head>
-  <body class="dark">
+  <body class="{{{ SPLASH_SCREEN_STYLE.toLowerCase() }}}">
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas"></canvas>
     </div>
@@ -26,17 +26,23 @@
     </div>
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
-      const hideFullScreenButton = "";
+      const hideFullScreenButton = "{{{ HIDE_FULL_SCREEN_BUTTON }}}";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/new.loader.js";
+      const loaderUrl = buildUrl + "/{{{ LOADER_FILENAME }}}";
       const config = {
-        dataUrl: buildUrl + "/new.data.unityweb",
-        frameworkUrl: buildUrl + "/new.framework.js.unityweb",
-        codeUrl: buildUrl + "/new.wasm.unityweb",
+        dataUrl: buildUrl + "/{{{ DATA_FILENAME }}}",
+        frameworkUrl: buildUrl + "/{{{ FRAMEWORK_FILENAME }}}",
+        codeUrl: buildUrl + "/{{{ CODE_FILENAME }}}",
+#if MEMORY_FILENAME
+        memoryUrl: buildUrl + "/{{{ MEMORY_FILENAME }}}",
+#endif
+#if SYMBOLS_FILENAME
+        symbolsUrl: buildUrl + "/{{{ SYMBOLS_FILENAME }}}",
+#endif
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "voronkovmm",
-        productName: "Trail of Hero",
-        productVersion: "1.0",
+        companyName: "{{{ COMPANY_NAME }}}",
+        productName: "{{{ PRODUCT_NAME }}}",
+        productVersion: "{{{ PRODUCT_VERSION }}}",
       };
 
       const container = document.querySelector("#unity-container");
@@ -66,6 +72,9 @@
         container.className = "unity-mobile";
         config.devicePixelRatio = window.devicePixelRatio;
       }
+#if BACKGROUND_FILENAME
+      canvas.style.background = "url('" + buildUrl + "/{{{ BACKGROUND_FILENAME.replace(/'/g, '%27') }}}') center / cover";
+#endif
       loadingCover.style.display = "";
 	  
 
@@ -116,9 +125,12 @@
 		vkBridge.send("VKWebAppShowNativeAds", {ad_format:"reward"})
 		.then(data => {
 			if(data.result) newInstance.SendMessage('VkontakteSDK', 'OnRewardedShow', 1);
-			else newInstance.SendMessage('VkontakteSDK', 'OnRewardedShow', 0);
+			else newInstance.SendMessage('VkontakteSDK', 'OnRewardedShow', 1);
 		})
-		.catch(error => console.log(error));
+		.catch(error => {
+			newInstance.SendMessage('VkontakteSDK', 'OnRewardedShow', 1);
+			console.log(error));
+		}
 	  }
 	  
 	  function showNativeAd()
