--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 		})
 		.catch(error => {
 			newInstance.SendMessage('VkontakteSDK', 'OnRewardedShow', 1);
-			console.log(error));
-		}
+			console.log(error);
+		});
 	  }
 	  
 	  function showNativeAd()
